# Abel

./: .clang-format  .gitignore  .gitmodules  BUILDING.md  CMakeLists.txt  CMakePresets.json  README.md  main.lua  vcpkg.json
.github/workflows/: checkBuild.yaml
builtin/: demoField.lua  player.lua
cmake_modules/: FindSDL2_image.cmake  FindSDL2_ttf.cmake
include/: abel.h  assets.h  chunk.h  entity.h  game.h  layer.h  map.h  mem.h  render.h  serror.h  sprite.h  tileset.h  vec2.h  world.h
include/core/: hashmap.h  mem.h  serror.h  tasks.h  vec2.h
libcore/: CMakeLists.txt
libcore/include/: abel.h  aconf.h.in  assets.h  chunk.h  entity.h  game.h  input.h  player.h  render.h  script.h  sound.h  sprite.h  ui.h  world.h
libcore/include/core/: event.h  hashmap.h  init.h  mem.h  tasks.h  vec2.h
libcore/include/res/: kongtext.h
libcore/include/types/: entity.h  input.h  sound.h  texture.h  vec2.h  world.h
libcore/src/: assets.c  chunk.c  entity.c  game.c  input.c  player.c  render.c  script.c  sound.c  sprite.c  ui.c  world.c
libcore/src/core/: event.c  hashmap.c  init.c  mem.c  serror.c  tasks.c
libcore/src/types/: entity.c  input.c  sound.c  texture.c  vec2.c  world.c
libcore/test/: CMakeLists.txt  events.c  main.c  tests.h
res/: tileset.kra
src/: assets.c  chunk.c  entity.c  game.c  layer.c  main.c  map.c  mem.c  render.c  serror.c  sprite.c  tileset.c  world.c
src/core/: hashmap.c  init.c  mem.c  serror.c  tasks.c
studio/: CMakeLists.txt  main.c
